force-app/main/default/objects/Centre__c/Centre__c.object-meta.xml
<CustomObject>
    <label>Centre</label>
    <nameField>
        <label>Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Centre</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>