force-app/main/default/objects/Centre__c/fields/Centre_City__c.field-meta.xml
<CustomField>
    <fullName>Centre_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre City</label>
    <referenceTo>Centre_City__c</referenceTo>
    <relationshipLabel>Centre</relationshipLabel>
    <relationshipName>Centre</relationshipName>
    <type>Lookup</type>
</CustomField>