force-app/main/default/objects/Centre__c/fields/Centre_Code__c.field-meta.xml
<CustomField>
    <fullName>Centre_Code__c</fullName>
    <label>Centre Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>