force-app/main/default/objects/Centre__c/fields/Centre_Type__c.field-meta.xml
<CustomField>
    <fullName>Centre_Type__c</fullName>
    <label>Centre Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Partnered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>