force-app/main/default/objects/Centre__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>