force-app/main/default/objects/Centre__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Centre_Code__c</columns>
    <columns>Centre_Type__c</columns>
    <columns>Telephone__c</columns>
    <columns>Centre_Status__c</columns>
    <columns>Centre_City__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>